# Nerva

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/bench/: 2026-03-12-cpu-mock-e2e-report.md  2026-03-12-framework-overhead-analysis.md  bench-preflight-checklist.md  timing-instrumentation.md
docs/design/: README.md  功能设计.md  性能测试指南.md  本地测试指南.md  架构原则指导手册.md  架构设计.md
docs/plans/: 2026-02-24-nerva-design-zh.md  2026-02-24-nerva-design.md  2026-02-25-design-review.md  2026-02-25-mvp-roadmap.md  2026-02-25-phase1-design.md  2026-02-25-phase1-impl-plan.md  2026-02-26-phase1-stability-update.md  (+26 more)
examples/: 01_single_model.py  02_multi_model_pipeline.py  03_parallel_dag.py  echo_server.py  mm_vllm_cpu_mock_server.py  mm_vllm_server.py  phase7_multimodal_vllm_server.py
scripts/: demo_client.py
spikes/: s1_ipc_benchmark.py  s2_trace_prototype.py  s4_async_batcher_benchmark.py
tests/: conftest.py  helpers.py  test_app.py  test_async_dispatch.py  test_backend_registry.py  test_batcher.py  test_batcher_e2e.py  test_bench_config.py  test_bench_infra.py  test_bench_perf_compare.py  test_bench_report.py  test_bench_runbook_refs.py  test_bench_runner.py  test_bench_targets.py  test_dag_executor_e2e.py  test_demo_client.py  test_executor.py  test_graph.py  test_ipc.py  test_mm_vllm_graph.py  test_model.py  test_multi_instance.py  test_observability.py  test_phase1_e2e.py  test_phase2_bench.py  test_phase2_e2e.py  test_phase4_e2e.py  test_phase5_e2e.py  test_phase7_bench_config.py  test_phase7_infra_launchers.py  test_phase7_loadgen.py  test_phase7_multimodal_graph.py  test_phase7_perf_compare_e2e.py  test_phase7_report.py  test_phase7_runbook_refs.py  test_phase7_runner.py  test_phase7_targets.py  test_primitives.py  test_protocol.py  test_proxy.py  (+17 more)
(+64 files in other folders)
